app/assets/stylesheets/components/_footer.scss
.footer-custom {
  min-height: 90px;
  padding: 15px 0;
  display: flex;
  align-items: center;
  justify-content: center;
    box-shadow: none;

}

.footer-container {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

.btn-footer {
  color: #004aad;
  padding: 12px 20px;
  font-size: 20px;
}

.btn-footer:hover {
  color: #ffde59;
}

.btn-footer:active {
  background-color: #084298;
}

footer i {
  font-size: 22px;
}

